--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="cart">
-        <fa-icon [icon]="cart" class="fa-2x"></fa-icon>
+        <fa-icon [icon]="cart" class="fa-2x"  routerLink="cart"></fa-icon>
         <div class="info">
           <p>Your Cart is currently empty..</p>
         </div>
