--- a/src/app/components/pages/marijuana/marijuana.component.html
+++ b/src/app/components/pages/marijuana/marijuana.component.html
@@ -77,20 +77,20 @@
             <h1>LIQUID</h1>
         </div>
     </div>
-    <div class="cards">
-        <div class="card">
+    <div class="cards1">
+        <div class="card1">
             <fa-icon [icon]="cannabis" class="fa-2x"></fa-icon>
             <h4>19+ Only</h4>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam placeat velit ut architecto provident
             </p>
         </div>
-        <div class="card">
+        <div class="card1">
             <fa-icon [icon]="cannabis" class="fa-2x"></fa-icon>
             <h4>30g Limit</h4>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam placeat velit ut architecto provident
             </p>
         </div>
-        <div class="card">
+        <div class="card1">
             <fa-icon [icon]="cannabis" class="fa-2x"></fa-icon>
             <h4>Trusted Sources</h4>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam placeat velit ut architecto provident
