--- a/src/app/components/pages/marijuana/marijuana.component.css
+++ b/src/app/components/pages/marijuana/marijuana.component.css
@@ -155,7 +155,7 @@
     top: 195%;
     font-size: 50px;
 }
-.cards{
+.cards1{
     height: 300px;
     width: 100%;
     margin-top: 40px;
@@ -164,7 +164,7 @@
     align-items: center;
     justify-content: center;
 }
-.card{
+.card1{
     height: 250px;
     width: 350px;
     background-color: white;
